--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,6 +14,10 @@
   margin-top: 0.4em;
 }
 
+.center nav a.link{
+  text-transform: capitalize;
+}
+
 @media (max-width: 600px) {
   .nav__list {
     display: none;
